--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "ContRespPP"]
+	path = ContRespPP
+	url = https://github.com/jcliff89/contresppp
+	shallow = true
+	registered = true
